src/main/java/org/example/dip/correct/EmailNotifierService.java
package org.example.dip.correct;

public class EmailNotifierService implements INotifierService {
    @Override
    public void sendMessage(String to, String message) {
        // TODO
    }
}
