src/main/java/org/example/dip/bad/EmailNotifierService.java
package org.example.dip.bad;

public class EmailNotifierService {

    public void sendMessage(final String to, final String message) {
        // Implementation to send message according to parameters.
    }
}
